added new files & fixed bugs

--- a/about_us.html
+++ b/about_us.html
@@ -14,8 +14,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="file:///C:/Users/Roy/Desktop/about%20us.html">About</a></li>
-        <li><a href="file:///C:/Users/Roy/Desktop/contact_us.html">Contact</a></li>
+        <li><a href="about_us.html">About</a></li>
+        <li><a href="contact_us.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -39,7 +39,7 @@
     <h2>Join Our Community</h2>
     <p>We invite you to join our community of dog enthusiasts. Connect with us on social media to stay updated on the latest products, training tips, and dog-related news. Feel free to reach out to us with any questions, concerns, or suggestions.</p>
 
-    <a href="file:///C:/Users/Roy/Desktop/contact_us.html" class="cta-button">Contact Us</a>
+    <a href="contact_us.html" class="cta-button">Contact Us</a>
   </section>
 
   <footer>
