--- a/contact_us.html
+++ b/contact_us.html
@@ -13,8 +13,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="file:///C:/Users/Roy/Desktop/about%20us.html">About</a></li>
-        <li><a href="file:///C:/Users/Roy/Desktop/contact_us.html">Contact</a></li>
+        <li><a href="about_us.html">About</a></li>
+        <li><a href="contact_us.html">Contact</a></li>
       </ul>
     </nav>
   </header>
