Done some initial design in homepage

--- a/index.html
+++ b/index.html
@@ -10,17 +10,65 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about_us.html">About</a></li>
-        <li><a href="contact_us.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+
+  <!-- Header golden-coloured ribbon -->
+  <div class="header">
+    <img class="logo" src="./images/logo.svg" alt="brand-logo">
+
+  </div>
+
+  <!-- Menu Bar -->
+
+  <div class="nav-bar">
+    <a class="active" href="./index.html">Home</a>
+    <a href="./about_us.html">About Us</a>
+    <a href="./products.html">Products</a>
+    <a href="./services.html">Services</a>
+    <a href="./contact_us.html">Contact Us</a>
+  </div>
+
+  <!-- Inserting 'Search' and 'Cart' buttons -->
+
+  <a href="#"><img class="mag-glass" src="./images/glass.svg" alt="magnifying-glass"></a>
+
+  <a href="#"><img class="cart" src="./images/cart.svg" alt="shopping-cart"></a>
+
+
+
+  <!-- Hero Image / Slider Area -->
+  <div class="hero">
+
+    <!-- Some changes need to be done here, because these are not simple anchor tags but these are slider keys -->
+    <a href="#"><img src="./images/left-arrow.svg" alt="left-arrow" class="left-arrow"></a>
+
+    <a href="#"><img src="./images/right-arrow.svg" alt="right-arrow" class="right-arrow"></a>
+
+    <!-- Slider dots should be included. I am not including them now coz I don't know the functionality of active 
+    and inactive slider in CSS. -->
+
+  </div>
+
+  <!-- Hot Products Section -->
+  <div class="hot-products">
+
+  </div>
+
+  <!-- Services Section -->
+  <div class="service-section">
+
+  </div>
+
+  <!-- Footer Section -->
+  <div class="bottom-section">
+
+  </div>
+
+  <footer>
+
+    <p>&copy; 2023 Dog Products and Services. All rights reserved.</p>
+
+  </footer>
+
 </body>
 
 </html>
