--- a/Front End 1.0/Homepage.html
+++ b/Front End 1.0/Homepage.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Homepage.css">
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <nav>
-        <div class="Logo"></div>
+        <!-- <div class="Logo"></div> -->
+        <img  class="Dog_Logo" src="Logos/Dr.Bark.png" alt="">
         <ul class="Nav_links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
