Navigation Bar done @Biswajit

--- a/Front End 1.0/Homepage.html
+++ b/Front End 1.0/Homepage.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vet Ecommerce</title>
     <link rel="stylesheet" href="Homepage.css">
+    <!--Adding icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
 
     <!-- Navigation Bar -->
-    <nav>
-        <!-- <div class="Logo"></div> -->
+    <header>
         <img  class="Dog_Logo" src="Logos/Dr.Bark.png" alt="">
-        <ul class="Nav_links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact us</a></li>
-            <i>search</i>
-            <i>cart</i>
-        </ul>
-    </nav>
+        <nav>
+            <!-- <div class="Logo"></div> -->
+            <ul class="Nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+            <ul class="icons">
+                <a class="icon_anchor" href="#"><span class="material-symbols-outlined">Search</span></a>
+                <a class="icon_anchor" href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
+            </ul>
+        </nav>
+    </header>
+        
 
     <!-- Hero Slider -->
     <div  class="Hero_div_slide">
